examples/test/testpolicy8425.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8425
  namespace: namespace219
spec:
  podSelector:
    matchLabels:
      key18: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value29
      podSelector:
        matchLabels:
          key23: value36
          key16: value20
          key45: value13
